# dragon-mcp-pay-agent

./: .gitignore  README.md  pyproject.toml
apps/: __init__.py
apps/agent/: graph.py  prompts.py  state.py
apps/cli/: onboard.py
apps/service/: __init__.py  main.py
docs/: demo-script.md  okx-marketplace-registration.md  okx-real-mode.md  submission-checklist.md  submission-summary.md
docs/plans/: 2026-06-23-001-feat-dragon-mcp-pay-agent-plan.md
examples/: __init__.py
examples/price_api/: __init__.py  main.py
ops/: deploy_vps.sh
templates/fastapi/: env.example.j2  payment_adapter.py.j2  payment_middleware.py.j2  test_payment.py.j2
templates/listing/: listing.md.j2
tests/: test_cli_onboard.py  test_example_price_api.py  test_listing_generator.py  test_models.py  test_okx_real_mode_config.py  test_openapi_parser.py  test_patch_generator.py  test_pricing_planner.py  test_report_generator.py  test_self_test_runner.py  test_service_app.py  test_submission_package.py
tools/: __init__.py  listing_generator.py  models.py  openapi_parser.py  patch_generator.py  pricing_planner.py  repo_scanner.py  report_generator.py  self_test_runner.py
