[project]
name = "dragon-mcp-pay-agent"
version = "0.1.0"
description = "Contest-ready agent that turns ordinary APIs into paid OKX Marketplace A2MCP provider packages."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "httpx>=0.27.0",
  "jinja2>=3.1.0",
  "okxweb3-app-x402[evm]>=0.1.0",
  "pydantic>=2.8.0",
  "typer>=0.12.0",
  "uvicorn>=0.30.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[project.scripts]
dragon-mcp-pay-agent = "apps.cli.onboard:app"

[tool.setuptools.packages.find]
include = ["apps*", "examples*", "tools*"]
exclude = ["dist*", "docs*", "templates*", "tests*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
addopts = "-q"
asyncio_default_fixture_loop_scope = "function"
